<resources>
    <string name="app_name">RecipeCake</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_favorite">Favorite</string>
    <string name="bottom_search">Search</string>
    <string name="bottom_new_recipe">New Recipe</string>
    <string name="bottom_account">Account</string>

    <string name="navigation_my_profile">My Profile</string>
    <string name="navigation_change_password">Change Password</string>
    <string name="navigation_sign_out">Sign Out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>