<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/navigation_home"
            android:title="@string/bottom_home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/navigation_search"
            android:title="@string/bottom_search"
            android:icon="@drawable/ic_search"/>

        <item android:id="@+id/navigation_new_recipe"
            android:title="@string/bottom_new_recipe"
            android:icon="@drawable/ic_create"/>

        <item android:id="@+id/navigation_favorite"
            android:title="@string/bottom_favorite"
            android:icon="@drawable/ic_favorite"/>
    </group>

    <item android:title="@string/bottom_account">
        <menu>
            <item android:id="@+id/navigation_my_profile"
                android:title="@string/navigation_my_profile"
                android:icon="@drawable/ic_account"/>

            <item android:id="@+id/navigation_change_password"
                android:title="@string/navigation_change_password"
                android:icon="@drawable/ic_change_password"/>
            <item android:id="@+id/navigation_sign_out"
                android:title="@string/navigation_sign_out"
                android:icon="@drawable/ic_sign_out"/>
        </menu>
    </item>
</menu>